tests/baselines/reference/partiallyAnnotatedFunctionInferenceError.errors.txt
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(12,11): error TS2345: Argument of type '(t1: D, t2: 任意, t3: 任意) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(13,11): error TS2345: Argument of type '(t1: 任意, t2: D, t3: 任意) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.
tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts(14,11): error TS2345: Argument of type '(t1: 任意, t2: 任意, t3: D) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.


==== tests/cases/conformance/types/contextualTypes/partiallyAnnotatedFunction/partiallyAnnotatedFunctionInferenceError.ts (3 errors) ====
    class C {
      test: string
    }
    
    class D extends C {
      test2: string
    }
    
    declare function testError<T extends C>(a: (t: T, t1: T) => void): T
    
    // more args
    testError((t1: D, t2, t3) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: D, t2: 任意, t3: 任意) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.
    testError((t1, t2: D, t3) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: 任意, t2: D, t3: 任意) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.
    testError((t1, t2, t3: D) => {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(t1: 任意, t2: 任意, t3: D) => 无值' is not assignable to parameter of type '(t: 任意, t1: 任意) => 无值'.
    